--- a/Nethereum.UI/Nethereum.UI.Core/Views/AccountsSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/AccountsSummaryPage.xaml
@@ -9,7 +9,8 @@
   <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">    
     <ListView ItemsSource="{Binding AccountsSummary, Mode=TwoWay}" SelectedItem="{Binding SelectedAccount}"
                CachingStrategy="RecycleElement"
-               HasUnevenRows="True"
+               HasUnevenRows="False"
+               RowHeight="80"
                IsPullToRefreshEnabled="True"
                RefreshCommand="{Binding LoadItemsCommand}"
                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
@@ -18,29 +19,8 @@
               >
         <ListView.ItemTemplate>
           <DataTemplate>
-
-            <ViewCell>
-              <Grid Padding="10">
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="80"/>
-                  <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <StackLayout Grid.Column="1"
-                             Spacing="4"
-                             VerticalOptions="Center">
-                  <Label Text="{Binding Address}" FontSize="Small" LineBreakMode="WordWrap"/>
-                  <Label Text="{Binding BalanceSummary}" FontSize="Small" LineBreakMode="WordWrap"/>
-                </StackLayout>
-
-                <abstractions:CircleImage HeightRequest="80"
-                     WidthRequest="80"
-                     Source="{Binding ImgUrl}"
-                     Aspect="AspectFill"
-                     VerticalOptions="Center"/>
-
-              </Grid>
-            </ViewCell>
-           
+            <ImageCell Height="80" ImageSource="{Binding ImgUrl}" Text="{Binding Address}" Detail="{Binding BalanceSummary}"/>
+          
           </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
