--- a/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Nethereum.UI.Core.Views.BalanceSummaryPage"
-             xmlns:res="clr-namespace:Nethereum.UI.Core.Resources;assembly=Nethereum.UI.Core"
-             xmlns:abstractions="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
-             Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
- 
+<views:MvxContentPage x:TypeArguments="viewModels:BalanceSummaryViewModel"  
+xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+xmlns="http://xamarin.com/schemas/2014/forms" 
+xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
+xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+x:Class="Nethereum.UI.Core.Views.BalanceSummaryPage"
+Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
+
     <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">    
     <ListView ItemsSource="{Binding TokensBalanceSummary, Mode=TwoWay}" SelectedItem="{Binding SelectedToken}"
                CachingStrategy="RecycleElement"
@@ -32,4 +34,4 @@
       <Label Text="Loading Accounts..." HorizontalOptions="Center" TextColor="White"/>
     </StackLayout>
   </AbsoluteLayout>
-</ContentPage>
+</views:MvxContentPage>
