--- a/Nethereum.UI/Nethereum.UI.Core/Views/MenuPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/MenuPage.xaml
@@ -1,63 +1,66 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage 
+<views:MvxContentPage x:TypeArguments="viewModels:MenuViewModel"  
+    xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+    xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
+    xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
     x:Class="Nethereum.UI.Core.Views.MenuPage"
-    Title="{Binding Title}"
-    Icon="{Binding Icon}"
-    ><ContentPage.Content>
-         <ListView 
+    Title="Nethereum Wallet"
+    Icon="slideout.png"
+    >
+    <StackLayout>
+        <ListView 
                 CachingStrategy="RecycleElement"
                 SeparatorColor="Transparent"
                 HasUnevenRows="True"
                 ItemsSource="{Binding MenuItems, Mode=TwoWay}" SelectedItem="{Binding SelectedMenuItem}"
                 x:Name="ListViewMenu">
-                <ListView.Header>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="10"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="10"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
-                            <RowDefinition Height="80"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="5"/>
-                        </Grid.RowDefinitions>
+    <ListView.Header>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="10"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="5"/>
+            </Grid.RowDefinitions>
 
-                        <BoxView Grid.ColumnSpan="3" 
+            <BoxView Grid.ColumnSpan="3" 
                                  Grid.RowSpan="4"
                                  BackgroundColor="#03A9F4"/>
-                       <controls:CircleImage
+            <controls:CircleImage
                             Grid.Column="1"
                             Grid.Row="1"
                             HorizontalOptions="Start"
                             VerticalOptions="End"
                             Source="icon_wb.png"
                             WidthRequest="75" HeightRequest="75"/>
-                        <Label 
+            <Label 
                             Grid.Column="1"
                             Grid.Row="2"
                             Text="Nethereum Wallet"
                             Style="{DynamicResource SubtitleStyle}"/>
-                    </Grid>
-                </ListView.Header>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Grid Padding="20">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <Image Source="{Binding Icon}" HeightRequest="25" WidthRequest="25"/>
-                                <Label Grid.Column="1" Text="{Binding Title}" FontSize="24"/>
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-    </ContentPage.Content>
-</ContentPage>
+        </Grid>
+    </ListView.Header>
+    <ListView.ItemTemplate>
+        <DataTemplate>
+            <ViewCell>
+                <Grid Padding="20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Source="{Binding Icon}" HeightRequest="25" WidthRequest="25"/>
+                    <Label Grid.Column="1" Text="{Binding Title}" FontSize="24"/>
+                </Grid>
+            </ViewCell>
+        </DataTemplate>
+    </ListView.ItemTemplate>
+    </ListView>
+  </StackLayout>
+</views:MvxContentPage>
