--- a/Nethereum.UI/Nethereum.UI.UWP/App.xaml
+++ b/Nethereum.UI/Nethereum.UI.UWP/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application
+﻿<local:NethereumApp
     x:Class="Nethereum.UI.UWP.App"
+    xmlns:mvx="using:MvvmCross.Platforms.Uap.Views"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Nethereum.UI.UWP"
     RequestedTheme="Dark">
 
-</Application>
+</local:NethereumApp>
