--- a/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
@@ -8,11 +8,13 @@ xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=Ima
 x:Class="Nethereum.UI.Core.Views.BalanceSummaryPage"
 Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
 
-    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">    
+    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"  Padding="5">    
     <ListView ItemsSource="{Binding TokensBalanceSummary, Mode=TwoWay}" SelectedItem="{Binding SelectedToken}"
                CachingStrategy="RecycleElement"
                HasUnevenRows="False"
                RowHeight="80"
+               Margin="10,10,0,0"
+              
                IsPullToRefreshEnabled="True"
                RefreshCommand="{Binding LoadItemsCommand}"
                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
@@ -20,10 +22,9 @@ Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
                AbsoluteLayout.LayoutBounds="0,0,1,1"
               >
         <ListView.ItemTemplate>
-          <DataTemplate>
-            <ImageCell Height="80" ImageSource="{Binding TokenImgUrl}" Text="{Binding Symbol}" Detail="{Binding Balance} "/>
-                
-          </DataTemplate>
+                <DataTemplate>
+                    <ImageCell Height="80" ImageSource="{Binding TokenImgUrl}" Text="{Binding Symbol}" Detail="{Binding Balance}"/>
+                </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
     <StackLayout IsVisible="{Binding IsBusy}" BackgroundColor="#80000000" Padding="12"
