--- a/Nethereum.UI/Nethereum.UI.Core/Views/AccountsSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/AccountsSummaryPage.xaml
@@ -1,27 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
  <views:MvxContentPage x:TypeArguments="viewModels:AccountsSummaryViewModel"  
                           xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
+                          xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
                           xmlns="http://xamarin.com/schemas/2014/forms" 
                           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                          xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
+                          
                           xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
                           x:Class="Nethereum.UI.Core.Views.AccountsSummaryPage"
                           Title="{Binding Title}" >
-        <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">    
+     <views:MvxContentPage.ToolbarItems>
+         <ToolbarItem Name="MenuItem1" Order="Primary" Icon="refresh.png" Text="Refresh" Priority="0" Command="{Binding RefreshItemsCommand}" />
+         <ToolbarItem Name="MenuItem2" Order="Primary" Icon="plus.png" Text="Refresh" Priority="0" Command="{Binding RefreshItemsCommand}" />
+    </views:MvxContentPage.ToolbarItems>
+    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">    
     <ListView ItemsSource="{Binding AccountsSummary, Mode=TwoWay}" SelectedItem="{Binding SelectedAccount}"
                CachingStrategy="RecycleElement"
                HasUnevenRows="False"
                RowHeight="80"
                IsPullToRefreshEnabled="True"
-               RefreshCommand="{Binding LoadItemsCommand}"
+               RefreshCommand="{Binding RefreshItemsCommand}"
                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                AbsoluteLayout.LayoutFlags="All"
                AbsoluteLayout.LayoutBounds="0,0,1,1"
               >
         <ListView.ItemTemplate>
           <DataTemplate>
-            <ImageCell Height="80" ImageSource="{Binding ImgUrl}" Text="{Binding Address}" Detail="{Binding BalanceSummary}"/>
-          
+
+            <ViewCell Height="80">
+                        <Grid Margin="5">
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <controls:CircleImage Source="{Binding ImgUrl}" Aspect="AspectFill" WidthRequest="55"  Grid.Column="0"/>
+                            <StackLayout Orientation="Vertical" Grid.Column="1" Margin="5">
+                                <Label Text="{Binding Address}"/>
+                                <Label Text="{Binding BalanceSummary}" />
+                            </StackLayout>
+                        </Grid>
+             </ViewCell>
+
           </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
