--- a/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/BalanceSummaryPage.xaml
@@ -5,34 +5,56 @@ xmlns="http://xamarin.com/schemas/2014/forms"
 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+xmlns:fab="clr-namespace:Refractored.FabControl;assembly=Refractored.FabControl"
 x:Class="Nethereum.UI.Core.Views.BalanceSummaryPage"
 Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
-
+    <views:MvxContentPage.ToolbarItems>
+        <ToolbarItem Name="MenuItem1" Order="Primary" Icon="refresh.png" Text="Refresh" Priority="0" Command="{Binding RefreshItemsCommand}" />
+    </views:MvxContentPage.ToolbarItems>
     <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"  Padding="5">    
     <ListView ItemsSource="{Binding TokensBalanceSummary, Mode=TwoWay}" SelectedItem="{Binding SelectedToken}"
                CachingStrategy="RecycleElement"
                HasUnevenRows="False"
                RowHeight="80"
                Margin="10,10,0,0"
-              
                IsPullToRefreshEnabled="True"
-               RefreshCommand="{Binding LoadItemsCommand}"
+               RefreshCommand="{Binding RefreshItemsCommand}"
                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                AbsoluteLayout.LayoutFlags="All"
                AbsoluteLayout.LayoutBounds="0,0,1,1"
               >
         <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ImageCell Height="80" ImageSource="{Binding TokenImgUrl}" Text="{Binding Symbol}" Detail="{Binding Balance}"/>
+                    <ViewCell Height="80">
+                        <Grid Margin="5">
+
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Image Source="{Binding TokenImgUrl}" Aspect="AspectFill" WidthRequest="55"  Grid.Column="0"/>
+                            <StackLayout Orientation="Vertical" Grid.Column="1" Margin="5">
+                                <Label Text="{Binding Symbol}"/>
+                                <Label Text="{Binding Balance}" />
+                            </StackLayout>
+                        </Grid>
+                    </ViewCell>
+
                 </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
+        <fab:FloatingActionButtonView
+            ImageName="refresh.png"
+            Command ="{Binding RefreshItemsCommand}"
+            x:Name="FloatingActionButtonAdd"
+            IsVisible="True"
+            AbsoluteLayout.LayoutFlags="PositionProportional"
+            AbsoluteLayout.LayoutBounds="1, 1, AutoSize, AutoSize"/>
     <StackLayout IsVisible="{Binding IsBusy}" BackgroundColor="#80000000" Padding="12"
                                     AbsoluteLayout.LayoutFlags="PositionProportional"
                                     AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
-      <ActivityIndicator IsRunning="{Binding IsBusy}" Color ="White">
-      </ActivityIndicator>
-      <Label Text="Loading Accounts..." HorizontalOptions="Center" TextColor="White"/>
-    </StackLayout>
+      <ActivityIndicator IsRunning="{Binding IsBusy}" Color ="White"/>
+        <Label Text="Loading Accounts..." HorizontalOptions="Center" TextColor="White"/>
+   </StackLayout>
   </AbsoluteLayout>
 </views:MvxContentPage>
