--- a/Nethereum.UI/Nethereum.UI.Core/Views/AccountBalanceSummaryPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/AccountBalanceSummaryPage.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:MvxContentPage x:TypeArguments="viewModels:BalanceSummaryViewModel"  
+<views:MvxContentPage x:TypeArguments="viewModels:AccountBalanceSummaryViewModel"  
 xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
 xmlns="http://xamarin.com/schemas/2014/forms" 
 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-x:Class="Nethereum.UI.Core.Views.BalanceSummaryPage"
+x:Class="Nethereum.UI.Core.Views.AccountBalanceSummaryPage"
 Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
     <views:MvxContentPage.ToolbarItems>
         <ToolbarItem Name="MenuItem1" Order="Primary" Icon="refresh.png" Text="Refresh" Priority="0" Command="{Binding RefreshItemsCommand}" />
@@ -46,7 +46,7 @@ Title="{Binding Title}" Icon="{Binding Icon}"  IsBusy="{Binding IsBusy}">
                                     AbsoluteLayout.LayoutFlags="PositionProportional"
                                     AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
       <ActivityIndicator IsRunning="{Binding IsBusy}" Color ="White"/>
-        <Label Text="Loading Accounts..." HorizontalOptions="Center" TextColor="White"/>
+        <Label Text="Loading Account..." HorizontalOptions="Center" TextColor="White"/>
    </StackLayout>
   </AbsoluteLayout>
 </views:MvxContentPage>
