--- a/Nethereum.UI/Nethereum.UI.Core/Views/TransferTokenPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/TransferTokenPage.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<views:MvxContentPage x:TypeArguments="viewModels:TokenEntryViewModel"  
+<views:MvxContentPage x:TypeArguments="viewModels:TransferTokenViewModel"  
 xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
 xmlns="http://xamarin.com/schemas/2014/forms" 
 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.UI.Core"
 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
-x:Class="Nethereum.UI.Core.Views.TokenEntryPage"
+x:Class="Nethereum.UI.Core.Views.TransferTokenPage"
 Title="{Binding Title}" Icon="{Binding Icon}">
     <views:MvxContentPage.ToolbarItems>
         <ToolbarItem Name="MenuItem1" Order="Primary" Icon="save.png" Text="Save" Priority="0" Command="{Binding SaveTokenCommand}" />
