--- a/Nethereum.UI/Nethereum.UI.Core/Views/TransferTokenPage.xaml
+++ b/Nethereum.UI/Nethereum.UI.Core/Views/TransferTokenPage.xaml
@@ -7,19 +7,25 @@ xmlns:viewModels="clr-namespace:Nethereum.UI.Core.ViewModels;assembly=Nethereum.
 xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
 x:Class="Nethereum.UI.Core.Views.TransferTokenPage"
 Title="{Binding Title}" Icon="{Binding Icon}">
-    <views:MvxContentPage.ToolbarItems>
-        <ToolbarItem Name="MenuItem1" Order="Primary" Icon="save.png" Text="Save" Priority="0" Command="{Binding SaveTokenCommand}" />
-    </views:MvxContentPage.ToolbarItems>
-    <AbsoluteLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"  Padding="5">
-        <TableView Intent="Form" Margin="5">
-            <TableRoot>
-                <TableSection>
-                    <EntryCell Label="Name :" HorizontalTextAlignment="Start" Text="{Binding TokenName, Mode=TwoWay}" Placeholder="Token Name" />
-                    <EntryCell Label="Contract Address :"  Text="{Binding TokenAddress, Mode=TwoWay}" Placeholder="Token contract address" />
-                    <EntryCell Label="Symbol :"  Text="{Binding Symbol, Mode=TwoWay}" Placeholder="Token Symbol" />
-                    <EntryCell Label="Decimal Places :"  Text="{Binding DecimalPlaces, Mode=TwoWay}" Placeholder="Token precission, decimal places" />
-                </TableSection>
-            </TableRoot>
-        </TableView>
-    </AbsoluteLayout>
+    <views:MvxContentPage.Content>
+        <StackLayout Margin="10">
+            <Label Text="Account From :"/>
+            <Picker x:Name="accountFrom" HorizontalOptions="FillAndExpand" SelectedIndex="{Binding SelectedAccountFrom}" ItemsSource="{Binding RegisteredAccounts}" >
+            </Picker>
+            <Label Text="Token :"/>
+            <Picker x:Name="tokenCortract" HorizontalOptions="FillAndExpand" SelectedIndex="{Binding SelectedToken}" ItemsSource="{Binding RegisteredTokens}" ItemDisplayBinding="{Binding Name}"/>
+            <Label VerticalOptions="Center" Text="Balance :"/>
+            <Label VerticalOptions="Center" HorizontalOptions="FillAndExpand" Text="{Binding CurrentTokenBalance}"/>
+            <Label Text="Amount :" />
+            <Entry Text="{Binding Amount, Mode=TwoWay}" Placeholder="Token amount" />
+            <Label Text="To Address :" />
+            <Entry Text="{Binding ToAddress, Mode=TwoWay}" Placeholder="Address to send tokens" />
+            <Label Text="Gas :" />
+            <Entry Text="{Binding Gas, Mode=TwoWay}" Placeholder="Gas (Optional it will be estimated if blank)" />
+            <Label Text="Gas Price (Gwei):" />
+            <Entry Text="{Binding GasPrice, Mode=TwoWay}" Placeholder="Gas Price (GWei)" />
+
+            <Button  HorizontalOptions="Center" Margin="5" Text="Transfer" Command="{Binding TransferTokenCommand}" />
+        </StackLayout>
+    </views:MvxContentPage.Content>
 </views:MvxContentPage>
